# topological-ae

./: .gitignore  pyproject.toml
scripts/: Readme.md  sample-shuffle.py  sample-weighting.py  train-test-split.py
snapshots/: epoch__checkpoint_11100.pt  epoch__checkpoint_112959.pt  epoch__checkpoint_13320.pt  epoch__checkpoint_25102.pt  epoch__checkpoint_8880.pt  epoch__checkpoint_9990.pt
snapshots-vz/: epoch__checkpoint_100408.pt  epoch__checkpoint_11100.pt  epoch__checkpoint_12210.pt  epoch__checkpoint_125510.pt  epoch__checkpoint_138061.pt  epoch__checkpoint_37653.pt  epoch__checkpoint_50204.pt  epoch__checkpoint_62755.pt  epoch__checkpoint_75306.pt  epoch__checkpoint_87857.pt
src/topoligical_embedding/: autoencoder.py  inference.py  trainer.py
